// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    "Button",
  ],
  "props": {
    "aria-current": "page",
    "className": "",
    "href": "/",
    "onClick": [Function],
    "onMouseEnter": [Function],
    "style": {},
  },
  "type": "a",
}
`;

exports[`Button renders correctly with external link 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    "Button",
  ],
  "props": {
    "className": "",
    "href": "https://example.com",
  },
  "type": "a",
}
`;

exports[`Button renders correctly with custom class name 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    "Button",
  ],
  "props": {
    "aria-current": "page",
    "className": "custom-class-name",
    "href": "/",
    "onClick": [Function],
    "onMouseEnter": [Function],
    "style": {},
  },
  "type": "a",
}
`;
